<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.dinu.testapp.WeatherActivity">

    <TextView
        android:id="@+id/cityName"
        android:text="Bucharest, RO"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cityName"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/realTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/temp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textSize="50sp" />

                    <ImageView
                        android:id="@+id/weathericon"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/googleg_standard_color_18" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/weathericon"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/description"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/humid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humid"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@id/pressure"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/windspeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windspeed"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@id/humid"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/clouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/windspeed"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/clouds"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/sunrise"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/lastupdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastupdate"
                        android:textSize="20sp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignLeft="@+id/sunset"
                        android:layout_alignStart="@+id/sunset" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/forecast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/notcoming"
                        android:layout_marginTop="10dp"
                        android:textSize="25sp" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>




</RelativeLayout>
