<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.dinu.testapp.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/maintxt"
        android:text="@string/maintitle"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submitbtn"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_above="@+id/submitbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp" />
    <TextView
        android:id="@+id/result"
        android:text="@string/result"
        android:textSize="20sp"
        android:layout_below="@+id/submitbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
